ENH: Update notebooks for colab

--- a/lifelib/libraries/basiclife/create_premium_table.ipynb
+++ b/lifelib/libraries/basiclife/create_premium_table.ipynb
@@ -13,6 +13,8 @@
    "id": "53bfe3af",
    "metadata": {},
    "source": [
+    "\n",
+    "\n",
     "This notebook shows how to create the premium table from `BasicTerm_M` model to be used in `BasicTerm_SE` and `BasicTerm_ME`.\n",
     "\n",
     "To calculate premiums, the present values of claims and annuities need to be taken at the beginning of the policy terms,\n",
@@ -26,7 +28,19 @@
     "* Read the `BasicTerm_M` model.\n",
     "* Replace the model point table with the one for the premium table. By default, the premium rates vary only by `age_at_entry` and `policy_term`. The range of `age_at_entry` is 20 to 59, and `policy_term` takes the value of either 10, 15 or 20. The model point data for the premium table is created from the combinations of the two attributes.\n",
     "* Calculate per-policy premiums for the model points.\n",
-    "* Create the premium table by processing the result of the above.\n"
+    "* Create the premium table by processing the result of the above."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "66e2145f",
+   "metadata": {},
+   "source": [
+    "Click the badge below to run this notebook online on Google Colab. You need a Google account and need to be logged in to it to run this notebook on Google Colab.\n",
+    "[![Run on Google Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/lifelib-dev/lifelib/blob/current/lifelib/libraries/basiclife/create_premium_table.ipynb)\n",
+    "\n",
+    "\n",
+    "The next code cell below is relevant only when you run this notebook on Google Colab. It installs lifelib and creates a copy of the library for this notebook."
    ]
   },
   {
@@ -45,6 +59,14 @@
     "        import lifelib; lifelib.create(lib, lib_dir)\n",
     "        \n",
     "    %cd $lib_dir"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "69e7aed3",
+   "metadata": {},
+   "source": [
+    "The next code imports the necessary Python modules."
    ]
   },
   {
