--- a/lifelib/libraries/savings/savings_example3.ipynb
+++ b/lifelib/libraries/savings/savings_example3.ipynb
@@ -107,6 +107,37 @@
   },
   {
    "cell_type": "markdown",
+   "id": "715558ab",
+   "metadata": {},
+   "source": [
+    "Click the badge below to run this notebook online on Google Colab. You need a Google account and need to be logged in to it to run this notebook on Google Colab.\n",
+    "[![Run on Google Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/lifelib-dev/lifelib/blob/current/lifelib/libraries/savings/savings_example3.ipynb)\n",
+    "\n",
+    "\n",
+    "The next code cell below is relevant only when you run this notebook on Google Colab. It installs lifelib and creates a copy of the library for this notebook."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "229baa18",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys, os\n",
+    "\n",
+    "if 'google.colab' in sys.modules:\n",
+    "    lib = 'savings'; lib_dir = '/content/'+ lib\n",
+    "    if not os.path.exists(lib_dir):\n",
+    "        !pip install lifelib\n",
+    "        !pip install ipyparallel\n",
+    "        import lifelib; lifelib.create(lib, lib_dir)\n",
+    "        \n",
+    "    %cd $lib_dir"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9f658fa9",
    "metadata": {},
    "source": [
@@ -115,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "2e920326",
    "metadata": {},
    "outputs": [
@@ -333,7 +364,7 @@
        "[100000 rows x 9 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "8f9b45d0",
    "metadata": {},
    "outputs": [],
@@ -373,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "feba3d73",
    "metadata": {},
    "outputs": [
@@ -496,7 +527,7 @@
        "4                    0        1000           0                   0  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -532,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "e7cc86b4",
    "metadata": {},
    "outputs": [
@@ -571,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "cc029c10",
    "metadata": {},
    "outputs": [
@@ -579,22 +610,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting 10 engines with <class 'ipyparallel.cluster.launcher.LocalEngineSetLauncher'>\n"
+      "Starting 10 engines with <class 'ipyparallel.cluster.launcher.LocalEngineSetLauncher'>\n",
+      "100%|███████████████████████████████████████████████████████████████████████████████████| 10/10 [00:05<00:00,  1.88engine/s]\n"
      ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "039b5bb0327c49a89870559309d7fe8f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/10 [00:00<?, ?engine/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
@@ -626,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "1326bf5a",
    "metadata": {},
    "outputs": [],
@@ -654,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "517e73dc",
    "metadata": {},
    "outputs": [
@@ -664,7 +682,7 @@
        "<AsyncResult(execute): finished>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -692,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "073cd836",
    "metadata": {},
    "outputs": [
@@ -924,7 +942,7 @@
        "[100000 rows x 9 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -951,7 +969,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.13"
   },
   "nbsphinx": {
    "execute": "never"
