--- a/lifelib/libraries/savings/savings_example4.ipynb
+++ b/lifelib/libraries/savings/savings_example4.ipynb
@@ -35,6 +35,36 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3cd25a50",
+   "metadata": {},
+   "source": [
+    "Click the badge below to run this notebook online on Google Colab. You need a Google account and need to be logged in to it to run this notebook on Google Colab.\n",
+    "[![Run on Google Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/lifelib-dev/lifelib/blob/current/lifelib/libraries/savings/savings_example4.ipynb)\n",
+    "\n",
+    "\n",
+    "The next code cell below is relevant only when you run this notebook on Google Colab. It installs lifelib and creates a copy of the library for this notebook."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "d4fa30b8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys, os\n",
+    "\n",
+    "if 'google.colab' in sys.modules:\n",
+    "    lib = 'savings'; lib_dir = '/content/'+ lib\n",
+    "    if not os.path.exists(lib_dir):\n",
+    "        !pip install lifelib\n",
+    "        import lifelib; lifelib.create(lib, lib_dir)\n",
+    "        \n",
+    "    %cd $lib_dir"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2330e5ee",
    "metadata": {},
    "source": [
@@ -45,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "6ad58376",
    "metadata": {},
    "outputs": [],
@@ -57,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "a1653a3f",
    "metadata": {},
    "outputs": [],
@@ -77,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "3065fd30",
    "metadata": {},
    "outputs": [
@@ -275,7 +305,7 @@
        "9                    0      300000           0                   0  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "d5eb4181",
    "metadata": {},
    "outputs": [
@@ -383,7 +413,7 @@
        "D              LEVEL             True         type_3            0.05  False"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "b40dd116",
    "metadata": {},
    "outputs": [],
@@ -421,17 +451,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "55aaff8b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8520793000061531"
+       "0.8517356999218464"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "2f0e249f",
    "metadata": {},
    "outputs": [
@@ -460,7 +490,7 @@
        "44386401.300826795"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -495,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "f36620bb",
    "metadata": {},
    "outputs": [],
@@ -533,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "cc320585",
    "metadata": {},
    "outputs": [
@@ -575,62 +605,62 @@
        "    <tr>\n",
        "      <th>premium_pp(t)</th>\n",
        "      <td>121</td>\n",
-       "      <td>0.201171</td>\n",
-       "      <td>22.439521</td>\n",
+       "      <td>0.168039</td>\n",
+       "      <td>18.700078</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>surr_charge_rate(t)</th>\n",
        "      <td>121</td>\n",
-       "      <td>0.192129</td>\n",
-       "      <td>21.430986</td>\n",
+       "      <td>0.152671</td>\n",
+       "      <td>16.989868</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>expenses(t)</th>\n",
+       "      <th>net_amt_at_risk(t)</th>\n",
        "      <td>121</td>\n",
-       "      <td>0.063368</td>\n",
-       "      <td>7.068365</td>\n",
+       "      <td>0.064587</td>\n",
+       "      <td>7.187456</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>inv_return_mth(t)</th>\n",
-       "      <td>121</td>\n",
-       "      <td>0.062507</td>\n",
-       "      <td>6.972279</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>claims(t, kind)</th>\n",
-       "      <td>484</td>\n",
-       "      <td>0.048879</td>\n",
-       "      <td>5.452229</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>pols_lapse(t)</th>\n",
-       "      <td>121</td>\n",
-       "      <td>0.037138</td>\n",
-       "      <td>4.142514</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>pols_if_at(t, timing)</th>\n",
-       "      <td>364</td>\n",
-       "      <td>0.035609</td>\n",
-       "      <td>3.971938</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>inv_income(t)</th>\n",
-       "      <td>121</td>\n",
-       "      <td>0.031250</td>\n",
-       "      <td>3.485714</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>inv_income_pp(t)</th>\n",
-       "      <td>121</td>\n",
-       "      <td>0.031210</td>\n",
-       "      <td>3.481353</td>\n",
+       "      <th>claim_pp(t, kind)</th>\n",
+       "      <td>242</td>\n",
+       "      <td>0.054906</td>\n",
+       "      <td>6.110144</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>pv_claims(kind)</th>\n",
        "      <td>4</td>\n",
-       "      <td>0.029631</td>\n",
-       "      <td>3.305219</td>\n",
+       "      <td>0.046301</td>\n",
+       "      <td>5.152598</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>pols_new_biz(t)</th>\n",
+       "      <td>121</td>\n",
+       "      <td>0.039833</td>\n",
+       "      <td>4.432807</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>pols_lapse(t)</th>\n",
+       "      <td>121</td>\n",
+       "      <td>0.034054</td>\n",
+       "      <td>3.789694</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>pols_if_at(t, timing)</th>\n",
+       "      <td>364</td>\n",
+       "      <td>0.032744</td>\n",
+       "      <td>3.643927</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>claims(t, kind)</th>\n",
+       "      <td>484</td>\n",
+       "      <td>0.032253</td>\n",
+       "      <td>3.589191</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>expenses(t)</th>\n",
+       "      <td>121</td>\n",
+       "      <td>0.031707</td>\n",
+       "      <td>3.528459</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -638,19 +668,19 @@
       ],
       "text/plain": [
        "                       calls  duration   dur_perc\n",
-       "premium_pp(t)            121  0.201171  22.439521\n",
-       "surr_charge_rate(t)      121  0.192129  21.430986\n",
-       "expenses(t)              121  0.063368   7.068365\n",
-       "inv_return_mth(t)        121  0.062507   6.972279\n",
-       "claims(t, kind)          484  0.048879   5.452229\n",
-       "pols_lapse(t)            121  0.037138   4.142514\n",
-       "pols_if_at(t, timing)    364  0.035609   3.971938\n",
-       "inv_income(t)            121  0.031250   3.485714\n",
-       "inv_income_pp(t)         121  0.031210   3.481353\n",
-       "pv_claims(kind)            4  0.029631   3.305219"
+       "premium_pp(t)            121  0.168039  18.700078\n",
+       "surr_charge_rate(t)      121  0.152671  16.989868\n",
+       "net_amt_at_risk(t)       121  0.064587   7.187456\n",
+       "claim_pp(t, kind)        242  0.054906   6.110144\n",
+       "pv_claims(kind)            4  0.046301   5.152598\n",
+       "pols_new_biz(t)          121  0.039833   4.432807\n",
+       "pols_lapse(t)            121  0.034054   3.789694\n",
+       "pols_if_at(t, timing)    364  0.032744   3.643927\n",
+       "claims(t, kind)          484  0.032253   3.589191\n",
+       "expenses(t)              121  0.031707   3.528459"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -674,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "cad13801",
    "metadata": {},
    "outputs": [
@@ -797,7 +827,7 @@
        "10          0.00    0.00    0.00"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -816,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "423d7635",
    "metadata": {},
    "outputs": [
@@ -832,7 +862,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -898,17 +928,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "e9caf8ae",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.24249910000071395"
+       "0.23794609995093197"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -920,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "2053f74a",
    "metadata": {},
    "outputs": [
@@ -930,7 +960,7 @@
        "44386401.30082682"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -941,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "c7fb56da",
    "metadata": {},
    "outputs": [
@@ -981,64 +1011,64 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>pv_claims(kind)</th>\n",
-       "      <td>4</td>\n",
-       "      <td>0.036243</td>\n",
-       "      <td>14.559991</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>av_pp_at(t, timing)</th>\n",
-       "      <td>485</td>\n",
-       "      <td>0.031251</td>\n",
-       "      <td>12.554811</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>premium_pp(t)</th>\n",
        "      <td>121</td>\n",
-       "      <td>0.018622</td>\n",
-       "      <td>7.481088</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>pols_if_at(t, timing)</th>\n",
-       "      <td>364</td>\n",
-       "      <td>0.016623</td>\n",
-       "      <td>6.678058</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>pols_lapse(t)</th>\n",
-       "      <td>121</td>\n",
-       "      <td>0.015670</td>\n",
-       "      <td>6.295221</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>net_amt_at_risk(t)</th>\n",
-       "      <td>121</td>\n",
-       "      <td>0.015668</td>\n",
-       "      <td>6.294359</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>pols_new_biz(t)</th>\n",
-       "      <td>121</td>\n",
-       "      <td>0.015643</td>\n",
-       "      <td>6.284206</td>\n",
+       "      <td>0.031252</td>\n",
+       "      <td>12.218230</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>surr_charge_rate(t)</th>\n",
        "      <td>121</td>\n",
-       "      <td>0.015632</td>\n",
-       "      <td>6.279896</td>\n",
+       "      <td>0.025487</td>\n",
+       "      <td>9.964533</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>mort_rate_mth(t)</th>\n",
+       "      <th>av_pp_at(t, timing)</th>\n",
+       "      <td>485</td>\n",
+       "      <td>0.024317</td>\n",
+       "      <td>9.507138</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>pv_claims(kind)</th>\n",
+       "      <td>4</td>\n",
+       "      <td>0.018868</td>\n",
+       "      <td>7.376668</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>pols_lapse(t)</th>\n",
        "      <td>121</td>\n",
-       "      <td>0.015621</td>\n",
-       "      <td>6.275681</td>\n",
+       "      <td>0.015675</td>\n",
+       "      <td>6.128363</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>inv_return_table()</th>\n",
+       "      <th>std_norm_rand()</th>\n",
        "      <td>1</td>\n",
-       "      <td>0.014546</td>\n",
-       "      <td>5.843516</td>\n",
+       "      <td>0.015664</td>\n",
+       "      <td>6.123889</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>pols_new_biz(t)</th>\n",
+       "      <td>121</td>\n",
+       "      <td>0.015619</td>\n",
+       "      <td>6.106272</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>pols_if_at(t, timing)</th>\n",
+       "      <td>364</td>\n",
+       "      <td>0.015589</td>\n",
+       "      <td>6.094620</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>pv_commissions()</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.013675</td>\n",
+       "      <td>5.346495</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>maint_fee_pp(t)</th>\n",
+       "      <td>121</td>\n",
+       "      <td>0.010906</td>\n",
+       "      <td>4.264016</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1046,19 +1076,19 @@
       ],
       "text/plain": [
        "                       calls  duration   dur_perc\n",
-       "pv_claims(kind)            4  0.036243  14.559991\n",
-       "av_pp_at(t, timing)      485  0.031251  12.554811\n",
-       "premium_pp(t)            121  0.018622   7.481088\n",
-       "pols_if_at(t, timing)    364  0.016623   6.678058\n",
-       "pols_lapse(t)            121  0.015670   6.295221\n",
-       "net_amt_at_risk(t)       121  0.015668   6.294359\n",
-       "pols_new_biz(t)          121  0.015643   6.284206\n",
-       "surr_charge_rate(t)      121  0.015632   6.279896\n",
-       "mort_rate_mth(t)         121  0.015621   6.275681\n",
-       "inv_return_table()         1  0.014546   5.843516"
+       "premium_pp(t)            121  0.031252  12.218230\n",
+       "surr_charge_rate(t)      121  0.025487   9.964533\n",
+       "av_pp_at(t, timing)      485  0.024317   9.507138\n",
+       "pv_claims(kind)            4  0.018868   7.376668\n",
+       "pols_lapse(t)            121  0.015675   6.128363\n",
+       "std_norm_rand()            1  0.015664   6.123889\n",
+       "pols_new_biz(t)          121  0.015619   6.106272\n",
+       "pols_if_at(t, timing)    364  0.015589   6.094620\n",
+       "pv_commissions()           1  0.013675   5.346495\n",
+       "maint_fee_pp(t)          121  0.010906   4.264016"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1085,7 +1115,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
