--- a/lifelib/libraries/ifrs17a/present_value_example_ep2.ipynb
+++ b/lifelib/libraries/ifrs17a/present_value_example_ep2.ipynb
@@ -16,6 +16,36 @@
   },
   {
    "cell_type": "markdown",
+   "id": "622a033c",
+   "metadata": {},
+   "source": [
+    "Click the badge below to run this notebook online on Google Colab. You need a Google account and need to be logged in to it to run this notebook on Google Colab.\n",
+    "[![Run on Google Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/lifelib-dev/lifelib/blob/current/lifelib/libraries/ifrs17a/present_value_example_ep2.ipynb)\n",
+    "\n",
+    "\n",
+    "The next code cell below is relevant only when you run this notebook on Google Colab. It installs lifelib and creates a copy of the library for this notebook."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "8a956ee0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys, os\n",
+    "\n",
+    "if 'google.colab' in sys.modules:\n",
+    "    lib = 'ifrs17a'; lib_dir = '/content/'+ lib\n",
+    "    if not os.path.exists(lib_dir):\n",
+    "        !pip install lifelib\n",
+    "        import lifelib; lifelib.create(lib, lib_dir)\n",
+    "        \n",
+    "    %cd $lib_dir"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b76482dc",
    "metadata": {},
    "source": [
@@ -26,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "510d8b5a",
    "metadata": {},
    "outputs": [],
@@ -45,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "5b9b92cb",
    "metadata": {},
    "outputs": [
@@ -129,7 +159,7 @@
        "        IA         188.978140   -249.816985"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +187,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
