--- a/lifelib/projects/ifrs17sim/ifrs17sim_charts_baseline.ipynb
+++ b/lifelib/projects/ifrs17sim/ifrs17sim_charts_baseline.ipynb
@@ -4,13 +4,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# IFRS17 Simulation (Baseline)\n",
+    "# IFRS17 Simulation (Baseline)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Click the badge below to run this notebook online on Google Colab. You need a Google account and need to be logged in to it to run this notebook on Google Colab.\n",
+    "[![Run on Google Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/lifelib-dev/lifelib/blob/current/lifelib/projects/ifrs17sim/ifrs17sim_charts_baseline.ipynb)\n",
     "\n",
-    "If you're viewing this page as a static HTML page on https://lifelib.io, the same contents are also available [here on binder] as Jupyter notebook executable online (it may take a while to load)\n",
     "\n",
-    "To run this notebook and get all the outputs below, Go to the **Cell** menu above, and then click **Run All**.\n",
+    "The next code cell below is relevant only when you run this notebook on Google Colab. It installs lifelib and creates a copy of the library for this notebook."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys, os\n",
     "\n",
-    "[here on binder]: https://mybinder.org/v2/gh/fumitoh/lifelib/binder?filepath=lifelib%2Fprojects%2Fifrs17sim%2Fifrs17sim_charts_baseline.ipynb"
+    "if 'google.colab' in sys.modules:\n",
+    "    lib = 'ifrs17sim'; lib_dir = '/content/'+ lib\n",
+    "    if not os.path.exists(lib_dir):\n",
+    "        !pip install lifelib\n",
+    "        import lifelib; lifelib.create(lib, lib_dir)\n",
+    "        \n",
+    "    %cd $lib_dir"
    ]
   },
   {
@@ -4209,7 +4231,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
