--- a/lifelib/projects/ifrs17sim/ifrs17sim_csm_waterfall.ipynb
+++ b/lifelib/projects/ifrs17sim/ifrs17sim_csm_waterfall.ipynb
@@ -12,6 +12,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Click the badge below to run this notebook online on Google Colab. You need a Google account and need to be logged in to it to run this notebook on Google Colab.\n",
+    "[![Run on Google Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/lifelib-dev/lifelib/blob/current/lifelib/projects/ifrs17sim/ifrs17sim_csm_waterfall.ipynb)\n",
+    "\n",
+    "\n",
+    "The next code cell below is relevant only when you run this notebook on Google Colab. It installs lifelib and creates a copy of the library for this notebook."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys, os\n",
+    "\n",
+    "if 'google.colab' in sys.modules:\n",
+    "    lib = 'ifrs17sim'; lib_dir = '/content/'+ lib\n",
+    "    if not os.path.exists(lib_dir):\n",
+    "        !pip install lifelib\n",
+    "        import lifelib; lifelib.create(lib, lib_dir)\n",
+    "        \n",
+    "    %cd $lib_dir"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## About this notebook\n",
     "\n",
     "This noteook demonstrates the usage of [ifrs17sim] project in [lifelib], by building and running a model and drawing a waterfall graph of CSM amortization on a single modelpoint.\n",
@@ -1402,7 +1430,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
