--- a/lifelib/projects/simplelife/simplelife-space-overview.ipynb
+++ b/lifelib/projects/simplelife/simplelife-space-overview.ipynb
@@ -6,11 +6,35 @@
    "source": [
     "# simplelife Space Overview\n",
     "\n",
-    "This notebook tutorial explains the basics of spaces, by taking a closer look at spaces defined in the simplelife model as an example.\n",
+    "This notebook tutorial explains the basics of spaces, by taking a closer look at spaces defined in the simplelife model as an example."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Click the badge below to run this notebook online on Google Colab. You need a Google account and need to be logged in to it to run this notebook on Google Colab.\n",
+    "[![Run on Google Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/lifelib-dev/lifelib/blob/current/lifelib/projects/simplelife/simplelife-space-overview.ipynb)\n",
     "\n",
-    "If you're viewing this page as a static HTML page on https://lifelib.io, the same contents are also available [here on binder] as Jupyter notebook executable online (it may take a while to load). To run this notebook and get all the outputs below, Go to the **Cell** menu above, and then click **Run All**.\n",
     "\n",
-    "[here on binder]: https://mybinder.org/v2/gh/fumitoh/lifelib/binder?filepath=lifelib%2Fprojects%2Fsimplelife%2Fsimplelife-space-overview.ipynb"
+    "The next code cell below is relevant only when you run this notebook on Google Colab. It installs lifelib and creates a copy of the library for this notebook."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys, os\n",
+    "\n",
+    "if 'google.colab' in sys.modules:\n",
+    "    lib = 'simplelife'; lib_dir = '/content/'+ lib\n",
+    "    if not os.path.exists(lib_dir):\n",
+    "        !pip install lifelib\n",
+    "        import lifelib; lifelib.create(lib, lib_dir)\n",
+    "        \n",
+    "    %cd $lib_dir"
    ]
   },
   {
@@ -608,7 +632,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
