--- a/lifelib/projects/fastlife/fastlife-introduction.ipynb
+++ b/lifelib/projects/fastlife/fastlife-introduction.ipynb
@@ -17,6 +17,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Click the badge below to run this notebook online on Google Colab. You need a Google account and need to be logged in to it to run this notebook on Google Colab.\n",
+    "[![Run on Google Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/lifelib-dev/lifelib/blob/current/lifelib/projects/fastlife/fastlife-introduction.ipynb)\n",
+    "\n",
+    "\n",
+    "The next code cell below is relevant only when you run this notebook on Google Colab. It installs lifelib and creates a copy of the library for this notebook."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys, os\n",
+    "\n",
+    "if 'google.colab' in sys.modules:\n",
+    "    lib = 'fastlife'; lib_dir = '/content/'+ lib\n",
+    "    if not os.path.exists(lib_dir):\n",
+    "        !pip install lifelib\n",
+    "        import lifelib; lifelib.create(lib, lib_dir)\n",
+    "        \n",
+    "    %cd $lib_dir"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Reading the fastlife model\n",
     "\n",
     "The fastlife model is saved as a folder named *model* in the fastlife folder. To create a live model, import **modelx** and call ``read_model`` function by passing the folder path."
@@ -784,7 +812,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -798,7 +826,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
